ready for first packaging

--- a/.gitignore
+++ b/.gitignore
@@ -617,3 +617,4 @@ tools/ui_conv_targets.json
 create_venv_logs/
 tools/create_venv_logs/create_venv.errors
 tools/create_venv.cmd
+tools/pipx_available_scripts.md
