--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ classifiers = ["License :: OSI Approved :: MIT License"]
 description-file = "readme.md"
 requires = [
 "pytoml>=0.1.21",
-"fuzzywuzzy==0.18.0",
-"gidlogger==0.1.2"
+"fuzzywuzzy>=0.18.0",
+"gidlogger>=0.1.2"
 ]
 
 
