--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,6 @@ author = "Giddius"
 home-page = "https://github.com/Giddius/Gidconfig"
 classifiers = ["License :: OSI Approved :: MIT License"]
 description-file = "readme.md"
-requires = [
-"fuzzywuzzy>=0.18.0",
-"gidlogger>=0.1.2"
-]
-
-
-
+requires = ["fuzzywuzzy>=0.18.0", "gidlogger>=0.1.4"]
 
 [tool.flit.scripts]
-
